--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 server.port=8090
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ads
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
